# iCamera

./: .gitignore  CMakeLists.txt  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  INDEX.md  README.md
include/openssl/: opensslconf.h
scripts/: build.sh  build_dependencies.sh  build_project.sh
source/: main.cpp
source/app/: aiotek_audio_task.cpp  aiotek_managers_task.cpp  aiotek_managers_task.hpp  aiotek_mqtt_task.cpp  aiotek_mqtt_task.hpp  aiotek_video_task.cpp  task_receiver.cpp  task_sender.cpp
source/common/: aiotek_timer.cpp  aiotek_timer.hpp
source/core/: aiotek_mailbox.cpp  aiotek_mailbox.hpp  aiotek_task.cpp  aiotek_task.hpp
source/module/audio/: aiotek_audio.cpp  aiotek_audio.hpp
source/module/network/: aiotek_net_if.hpp  aiotek_net_managers.cpp  aiotek_net_managers.hpp
source/module/network/mqtt/: aiotek_mqtt.cpp  aiotek_mqtt.hpp
source/module/video/: aiotek_video.cpp  aiotek_video.hpp
source/utils/: aiotek_console.cpp  aiotek_console.hpp  aiotek_log.cpp  aiotek_log.hpp
